--- a/sites/all/modules/contrib/views/CHANGELOG.txt
+++ b/sites/all/modules/contrib/views/CHANGELOG.txt
@@ -1,5 +1,85 @@
 CHANGELOG for Views 3 for Drupal 7
 
+Views 3.x-7.x-dev
+=================
+#1017128 by bojanz, dereine: Add support to render a single delta.
+follow up by bojanz: Better description for the delta.
+#1017254 by dereine: Fix undefined property error in argument_string handler.
+#1007886 by dereine: Relationship-fields in field_field handler should use the table alias.
+#1018766 by bojanz: Fix click_sort for fieldapi fields.
+#1017128 by bojanz: Follow up: Hide field_field if field value is empty.
+#1018802 by dereine: Convert 'formula' add_where to add_where_expression.
+#1018766 by solotandem: Fix click_sort for fieldapi fields.
+#960648 by dereine: Addjust comment link to d7 changes.
+#997662 by das-peter: Saving a machine name of a display throws Notice "Undefined property new_id".
+#955464 by davereid: Fix notice in views_many_to_one_helper when $operator = 'and'.
+#1019438 by dereine: Fix "illegal choice" for unlimited fields.
+#1019506 by dereine: Fix the remove items element on the rearrange filter_group form.
+#1011004 by dereine: Add validation for query plugin option forms.
+#991202 by helmo: Add option to turn linebreaks into br tags in field rewriting.
+#1001302 by dagmar: Enable attachment displays to have more links.
+#1021784 by tim.plunkett: Extra space added in some classes erroneously.
+#862072 by jhedstrom: Allow argument validator to test if user has edit or delete access to a node.
+Fix fieldsets in field handler.
+#962564 by joshuajabbour: Allow link attributes to be rewritten (internally).
+#672864 by dboulet: cols- class incorrect on table, grid.
+#981872 by infojunkie: Option to hide attachments in summary views.
+#839810 by marcp: Get UID from URL argument default plugin should accept uids from Views pages.
+#1012584 by dereine: Allow filtering on term descriptions.
+#895046 by bojanz, dereine, merlinofchaos: Implement proper multiple field api handling and improve field api rendering in general.
+#1035168 by Ao: Fix strict warning in unread node filter.
+#1044916 by dagmar: Fix improper use of set_current_page member variable.
+#1016814 by eaton: string argument should support name_field.
+#1007376 by dereine: Jump menu was not correctly supporting offsets.
+#1018160 by zhangtaihao: unpack_translatable could infinitely recurse when options are arrays but not declared as such.
+#776830: Attachments and other displays lost "Items to display" controls.
+#747782 by dereine: Improve jump menu grouping.
+#1026014 by dereine and alex_b: Use more always should not ask for the count query to see if we need to show the more link.
+#1012596 by dereine: More inline documentation of class variables.
+#988680 by mikeytown2: Fix Views memory leak with attachments.
+#1023062 by mikejoconnor: Replace views_process_dependency with ctools_dependent_process again.
+#1023558 by mariusz.slonina: Add a user cancel account link.
+#1015960 by duellj: View js should use DOM element not jquery object.
+#1027552 by david_Rothstein: Fix Node: Has new content fatal error.
+#955464 by dereine: Fix many_to_one helper in the case of have no condition and operator = 'and'.
+#696550: Taxonomy validator should always set title when it successfully validates.
+#869172 by bendiy: Add an "external" parameter to field link rewriting so that external URLs can be formed properly even without a scheme.
+#935176 by benoit.borrel: Add "system" table to Views data.
+#839236: Fields named "buttons" would disappear from the rearrange UI due to conflict with the buttons on the form.
+#783514 by dereine: Allow breaking of strings with + and ,
+#1000760 by dereine: Prevent htmlspecialchars() error with string arguments.
+#1033494 by dereine: Fix filter by user picture: change used handler.
+#895046 by bojanz: Follow up of the multiple field handler. Fixes an issue with group-by and rename entity_api_classes.
+#1044250 by dereine: Fix notice in views_handler_filter_history_user_timestamp for disabled comment module.
+#1018872 by dereine: field_field handler shouldn't force to set base field in relationship.
+#1049586 by fgm: Fix strict error in field_field::init.
+#1049276 by david_Rothstein: Commit the 6.11 patch to d7.
+#1011226 by Chris Gillis, Sutharsan: Fix display of error messages in the views inteface.
+#1050962 by Sutharsan: Convert #value to #markup in validate methods.
+#1051034 by Manuel Garcia: Allow field wrapper class to take multiple classes.
+#957284 by dereine: Fix search filter to work with d7 version of search.module's api.
+#534452 by dereine: Remove non-functional "optional" setting on string filters.
+#1019826 by penguin25: Respect contact page access overrides when displaying contact link.
+#652684 by dereine: Search and replace error resulted in invalid function name in nid argument validator.
+#1008358: Updated for translation plugin to work properly with i18nviews.
+#1055378 by mfb: Fix rss_namespaces.
+#957284: by dereine: Followup for filter_search fix.
+#1063208 by dereine: Fix joins between some tables and file_usage.
+#1024586 by merlinofchaos, dereine: Provide a way to move old fields in views data. Additional move field-api data to it.
+#990554 by bojanz: Allow to show default values of fields.
+#1039460 by robertgarrigos: Rename drupal_set_content to drupal_add_region_content
+#1045908 by bfroehle: Fix type in api-upgrading.html
+#646456 by xslim: Add a workaround to run update.php
+#1055602 by dereine: Convert argument search to dbtng.
+#1039584 by dereine: Fix path of taxonomy path, function from d6
+#1019746 by Ralf: Check_plain role names.
+#1006482 by dereine: Fix filter: user posted or commented handler.
+#870960 by bojanz, dereine: Field label should derive from field Label, not field name.
+#1056824 by greggles: Rename the displayed permission from "access all views" to "bypass views access control".
+#1022052 bojanz, dereine: Don't add the field_info into the views data array
+#970162 by longwave: Add "time hence" options to date field format
+#1069100 by paranojik: remove legacy code from views_plugin_row_comment_view:pre_render().
+
 Views 3.x-7.x-alpha1 (05-Jan-2011)
 ==================================
 
