--- a/sites/all/modules/contrib/field_group/CHANGELOG.txt
+++ b/sites/all/modules/contrib/field_group/CHANGELOG.txt
@@ -2,7 +2,14 @@
 CHANGELOG for field_group for Drupal 7
 
 Field_group 7.x-1.x-dev
-
+    o #1061228 Rewrite the field_group_field_group_is_empty function.
+    o Added ID's to fieldgroups.
+    o Removed unused field_group.admin.inc + menu item. Required asterix moving to field_group setting.
+    o #1045526 by stalski: Make formatter options more user-friendly and logical.
+    o #1041880 by robertgarrigos: duplicated entries in field_group table.
+    o #1043834 by amsri: Field Group module just does not work with profiles 2.
+    
+Field_group 7.x-1.0-rc1
     o #1006464 Change #groups to #fieldgroups because of name collapsing with form_process_fieldset
     o #1024184 fix collapsible when mode is set to open
     o #1020278 by mori: Update fails.
@@ -20,3 +27,4 @@ Field_group 7.x-1.x-dev
     o Changed some important variable name, so it makes more sense and easier to read.
     o Add basic crud functions.
     
+Field_group 7.x-1.0-rc1
