--- a/sites/all/libraries/plupload/changelog.txt
+++ b/sites/all/libraries/plupload/changelog.txt
@@ -1,3 +1,69 @@
+Version 1.5.4 (2012-04-12)
+	Flash: Disable scripting if swf was loaded from another domain.
+Version 1.5.3 (2012-04-05)
+	HTML5: Check if xhr object is initialized, before calling abort() on it.
+	HTML4: Postpone form removal until uploaders state changes, to avoid error on resuming stopped uploads.
+	BrowserPlus: Fix mechanical typo, that caused error during mime type check.
+	BrowserPlus: browserPlus.Uploader.Cancel() has two required parameters, dies with the error if not passed.
+	Flash: Improve runtime's behaviour during upload cancellation.
+	Flash: Survive the case when GPSVersionID contains unexpected value.
+	Flash: Fix random freeze in Chrome's bundled Flash Player.
+	Flash: Avoid the silent break when URLStream not yet open, but close is called on it.
+	Flash: Move Destroy handler out of Flash:Init handler, since it might be called not only after Flash:Init but also before it.
+	Flash: Avoid warning during build with mxmlc.
+	Try removeEventListener first in IE and only if it fails - detachEvent.
+	Fix plupload.getPos to return proper value in IE8+.
+	Do not initiate plupload.STARTED state, if file queue is empty.
+	Additional language packs: Estonian, Polish, Korean, French-Canadian, Greek, Persian/Farsi.
+Version 1.5.2 (2012-01-06)
+	UI Widget: Do not show UI if no runtime can be initialized.
+	UI Widget: Timely update file size and total size if resize in action.
+	UI Widget: Constrain renaming feature to queued files only.
+	UI Widget: Disable Add button properly, if requested, rather then just hide.
+	HTML4/HTML5/BrowserPlus: Avoid adding mime type twice to dialog trigger.
+	HTML5: fix regression, when unresized images were failing on FF3.6.
+	HTML5: Constrain Gecko 2,5,6 workaround to multipart mode only.
+	HTML5/Flash: Take into account weird possibilities of ExifVersion being a string, rather then standard Undefined.
+	Flash: Simplify event dispatching in BitmapDataUnlimited class, in order to avoid freezing on resizing in FP11.
+	Add ability to disable file dialog trigger on request (uploader.disableBrowse(true/false)).
+	Support for immediate abort of upload process, be it chunked upload or regular one.
+	Abort all activity, before destroying uploader.
+	Revive temporary file removal logic in upload.php.
+	Fix potential vulnerability in dump.php and upload.php.
+	Additional MIME types: application/vnd.openxmlformats-officedocument.*, application/x-javascript, application/json, text/css,css, application/vnd.oasis.opendocument.formula-templat.
+	Additional language packs: Hungarian, Croatian, Serbian, Romanian.
+Version 1.5.1.1 (2011-09-27)
+	HTML5: Fix mechanical typo, that successfully broke drag and drop, wherever could.
+Version 1.5.1 (2011-09-26)
+	HTML4: Add support for server responses in HTML format.
+	HTML5: Disable multiple file selection in Safari 5.x for Windows (see #363).
+	HTML5: Gecko 2/5/6 should upload chunks as binary strings when in chunking mode and client side resize is requested.
+	Flash: Enforce URLStream mode when custom headers are passed.
+	Flash: Fix embedding problems in IE9 (and all other IEs).
+	Flash/Gears/BrowserPlus/SilverLight: Expose multi_selection feature, to be used in required_features (mainly to overcome Safari for Windows problem).
+	SilverLight: Properly handle custom and null headers.
+	UploadComplete moved to fire after the last StateChanged event.
+	Additional language packs: Finnish.
+Version 1.5b (2011-09-11)
+	UI Widget: Fix sortable logic.
+	UI Widget: Fix bug, when message was displayed simultaneously across all Plupload UI instances on the page.
+	UI Widget: notify() method is now public - users can throw their own messages into the widget header.
+	HTML4/HTML5: Revise input[type=file] placement logic to support cursor styling on Geko 2+.
+	HTML5: Revise Drag'n'Drop detection logic.
+	HTML5: Make Exif and GPS information available to user, introduce two new events: ExifData and GpsData.
+	HTML5: Add support for File.prototype.slice() method (mozSlice/webkitSlice) in order to be able to upload files in chunks without preloading.
+	HTML5: Remove any JPEG headers before restoring them, 'cause user agent (like Chrome), might be inserting it's own.
+	Flash: Remove a limit on the depth of image header check, since it still fails in some cases and performance gain is negligible.
+	Flash: Fix regression, when runtime hanged when not images where passed in as images.	
+	SilverLight: Fix bug, when JSON serializer was failing on null.
+	SilverLight: Remove cast to integer for chunk boundary, which resulted in a wrong size for last chunks on huge files.
+	SilverLight: Increase read buffer, add disposal of ImageStream and FileStream, optimize for performance.
+	Updated build.xml to include language packs in release package under js/ folder.
+	Gears/BrowserPlus: Add support for * file filter.
+	BeforeUpload now can cancel upload if required.
+	Additional MIME types: text/csv, image/photoshop, video/x-ms-wmv, video/avi, video/webm support
+	Additional language packs: Japanese
+	Cleaned examples.
 Version 1.4.3.2 (2011-04-13)
 	Fixed bug in HTML5 runtime, when was reduced by a factor of 100 after every upload.
 Version 1.4.3.1 (2011-04-12)
